--- a/calculators/break-even-investment-calculator.html
+++ b/calculators/break-even-investment-calculator.html
@@ -223,9 +223,22 @@
     Ad Space
   </div>
 
-  <p class="note">
-    Results are indicative based on assumed constant returns. Actual investment performance may vary.
-  </p>
+  <div class="note">
+    <strong>Note:</strong> Results are indicative based on assumed constant returns. Actual investment performance may vary.
+  </div>
+
+  <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+</footer>
+
+  
 
 </div>
 
