--- a/calculators/buy-vs-rent-calculator.html
+++ b/calculators/buy-vs-rent-calculator.html
@@ -263,11 +263,24 @@
 
     <h4>Q: What about transaction costs?</h4>
     <p>Buying involves registration charges (5-7%), stamp duty, brokerage, legal fees which add 7-10% to property cost. Our calculator considers down payment but you should factor these additional costs.</p>
-
-    <p class="note"><strong>Note:</strong> This calculator provides estimates for comparison purposes. Actual results may vary based on individual circumstances, market conditions, and additional factors like tax benefits, property registration costs, and unforeseen expenses.</p>
   </div>
 
   <div class="ads">Ad Space</div>
+
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimates for comparison purposes. Actual results may vary based on individual circumstances, market conditions, and additional factors like tax benefits, property registration costs, and unforeseen expenses.
+  </div>
+
+  <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+</footer>
 
 </div>
 
