--- a/calculators/car-loan-vs-lease-calculator.html
+++ b/calculators/car-loan-vs-lease-calculator.html
@@ -458,9 +458,13 @@
     </div>
   </section>
 
-</div>
+  <div class="ads">Ad Space</div>
 
-<footer>
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimates for comparing car loan and lease costs. Actual costs may vary based on down payment, interest rates, lease terms, residual value, insurance, maintenance, and tax implications. Consult your dealer or financial advisor for personalized vehicle financing guidance.
+  </div>
+
+  <footer>
   <div class="container">
     <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
     <p>
@@ -470,6 +474,10 @@
     </p>
   </div>
 </footer>
+
+</div>
+
+
 
 <script src="car-loan-vs-lease-calculator.js"></script>
 </body>
