--- a/calculators/compound-interest-calculator.html
+++ b/calculators/compound-interest-calculator.html
@@ -198,9 +198,20 @@
   <!-- 🔹 CONTENT BREAK AD -->
   <div class="ads">Ad Space</div>
 
-  <p class="note">
-    This calculator provides estimated results. Actual returns may vary.
-  </p>
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimated results. Actual returns may vary.
+  </div>
+
+ <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+</footer>
 
 </div>
 
