--- a/calculators/credit-card-debt-payoff-calculator.html
+++ b/calculators/credit-card-debt-payoff-calculator.html
@@ -193,9 +193,20 @@
   <!-- CONTENT-BREAK AD -->
   <div class="ads">Ad Space</div>
 
-  <p class="note">
-    Calculations are estimates. Consult your credit card terms for exact details.
-  </p>
+  <div class="note">
+    <strong>Note:</strong> Calculations are estimates. Consult your credit card terms for exact details.
+  </div>
+
+  <<footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+</footer>
 
 </div>
 
