--- a/calculators/credit-score-impact-simulator.html
+++ b/calculators/credit-score-impact-simulator.html
@@ -276,12 +276,20 @@
 
   <div class="ads">Ad Space</div>
 
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimates for credit score impact based on typical scoring models. Actual credit score changes may vary based on your credit bureau (CIBIL, Experian, Equifax), credit history, and other factors. Check your credit report regularly for accurate score monitoring.
+  </div>
+
   <footer>
-    © 2026 Upkarna Online Tools |
-    <a href="../about.html">About</a> |
-    <a href="../privacy-policy.html">Privacy Policy</a> |
-    <a href="../contact.html">Contact</a>
-  </footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+</footer>
 
 </div>
 
