--- a/calculators/education-loan-calculator.html
+++ b/calculators/education-loan-calculator.html
@@ -553,11 +553,27 @@
                 <li>📝 <a href="../blog/how-to-calculate-emi.html">How to Calculate EMI</a> - Complete guide</li>
             </ul>
         </div>
+
+        <div class="ads">Ad Space</div>
+
+    <div class="note">
+        <strong>Note:</strong> This calculator provides estimates for education loan EMI with moratorium period. Actual loan repayment may vary based on interest rates, processing fees, moratorium period, prepayment options, and bank policies. Consult your bank or financial institution for exact loan terms and EMI schedule.
     </div>
 
     <footer>
-        <p>&copy; 2026 Upkarna - Free Financial Calculators | <a href="../privacy-policy.html">Privacy Policy</a></p>
+    <div class="container">
+        <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+        <p>
+        <a href="../privacy-policy.html">Privacy Policy</a> |
+        <a href="../contact.html">Contact Us</a> |
+        <a href="../about.html">About</a>
+        </p>
+    </div>
     </footer>
+
+    </div>
+
+    
 
     <script src="education-loan-calculator.js"></script>
 </body>
