--- a/calculators/emi-calculator.html
+++ b/calculators/emi-calculator.html
@@ -196,9 +196,20 @@
     Ad Space
   </div>
 
-  <p class="note">
-    Results are indicative. Actual EMI may vary based on bank policies.
-  </p>
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimates for EMI calculation. Actual EMI may vary based on your loan terms, bank policies, processing fees, prepayment charges, and interest rate changes. Consult your bank or financial institution for exact EMI amount and loan details.
+  </div>
+
+  <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+  </footer>
 
 </div>
 
