--- a/calculators/epf-calculator.html
+++ b/calculators/epf-calculator.html
@@ -210,9 +210,21 @@
 
   <div class="ads">Ad Space</div>
 
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimates for EPF maturity amount. Actual corpus may vary based on EPF interest rate changes, voluntary contributions, service tenure, and withdrawals. Consult EPFO or your employer for exact EPF balance and entitlement.
+  </div>
+
   <footer>
-    <p>&copy; 2024 Upkarna Online Tools. All rights reserved. | <a href="../privacy-policy.html">Privacy Policy</a></p>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
   </footer>
+
 
 </div>
 
