--- a/calculators/fire-calculator.html
+++ b/calculators/fire-calculator.html
@@ -262,12 +262,21 @@
 
   <div class="ads">Ad Space</div>
 
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimates for FIRE (Financial Independence Retire Early) planning. Actual retirement corpus needed may vary based on inflation rates, investment returns, lifestyle changes, and unforeseen expenses. Consult a financial planner for personalized retirement planning.
+  </div>
+
   <footer>
-    © 2026 Upkarna Online Tools |
-    <a href="../about.html">About</a> |
-    <a href="../privacy-policy.html">Privacy Policy</a> |
-    <a href="../contact.html">Contact</a>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
   </footer>
+
 
 </div>
 
