--- a/calculators/gratuity-calculator.html
+++ b/calculators/gratuity-calculator.html
@@ -264,6 +264,24 @@
     <p>No, payment of gratuity is a statutory right. Employer must pay within 30 days. Refusal or delay attracts penalties and interest.</p>
   </section>
 
+  <div class="ads">Ad Space</div>
+
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimates for gratuity calculation as per Payment of Gratuity Act 1972. Actual gratuity amount may vary based on your last drawn salary, years of service, and company policies. Consult your HR department for exact gratuity entitlement.
+  </div>
+
+  <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+  </footer>
+
+
 </div>
 
 <script src="gratuity-calculator.js"></script>
