--- a/calculators/hra-calculator.html
+++ b/calculators/hra-calculator.html
@@ -437,7 +437,15 @@
 
 </div>
 
-<footer>
+  <div class="ads">
+    <p>Ad Space</p>
+  </div>
+
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimates based on Section 10(13A) of the Income Tax Act. Actual HRA exemption may vary based on your specific circumstances. Consult a tax advisor for personalized advice.
+  </div>
+
+  <footer>
   <div class="container">
     <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
     <p>
@@ -446,7 +454,10 @@
       <a href="../about.html">About</a>
     </p>
   </div>
-</footer>
+  </footer>
+
+
+</div>
 
 <script src="hra-calculator.js"></script>
 </body>
