--- a/calculators/income-tax-calculator.html
+++ b/calculators/income-tax-calculator.html
@@ -230,6 +230,22 @@
     <p>Ad Space</p>
   </div>
 
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimates for income tax calculation comparing old and new tax regimes. Actual tax liability may vary based on your deductions, exemptions, rebates, surcharges, and cess. Consult a tax advisor for accurate tax planning and regime selection. Use our <a href="hra-calculator.html">HRA Calculator</a> and <a href="medical-insurance-80d-calculator.html">Section 80D Calculator</a> for detailed deduction calculations.
+  </div>
+
+  <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+  </footer>
+
+
 </div>
 
 <script src="income-tax-calculator.js"></script>
