--- a/calculators/inflation-impact-calculator.html
+++ b/calculators/inflation-impact-calculator.html
@@ -228,9 +228,21 @@
     Ad Space
   </div>
 
-  <p class="note">
-    Results are indicative. Actual inflation rates may vary based on economic conditions.
-  </p>
+  <div class="note">
+    <strong>Note:</strong> Results are indicative. Actual inflation rates may vary based on economic conditions.
+  </div>
+
+  <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+  </footer>
+
 
 </div>
 
