--- a/calculators/loan-eligibility-calculator.html
+++ b/calculators/loan-eligibility-calculator.html
@@ -289,12 +289,21 @@
 
   <div class="ads">Ad Space</div>
 
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimates for loan eligibility based on income and obligations. Actual loan amount sanctioned may vary based on your credit score, bank policies, property valuation, and documentation. Consult your bank or financial institution for accurate eligibility assessment.
+  </div>
+
   <footer>
-    © 2026 Upkarna Online Tools |
-    <a href="../about.html">About</a> |
-    <a href="../privacy-policy.html">Privacy Policy</a> |
-    <a href="../contact.html">Contact</a>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
   </footer>
+
 
 </div>
 
