--- a/calculators/loan-prepayment-foreclosure-calculator.html
+++ b/calculators/loan-prepayment-foreclosure-calculator.html
@@ -245,9 +245,21 @@
     </div>
   </section>
 
-  <p class="note">
-    Note: This calculator provides estimates based on standard loan formulas. Actual savings may vary based on lender terms and fees.
-  </p>
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimates based on standard loan formulas. Actual savings may vary based on lender terms and fees.
+  </div>
+
+  <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+  </footer>
+
 
 </div>
 
