--- a/calculators/lumpsum-investment-calculator.html
+++ b/calculators/lumpsum-investment-calculator.html
@@ -196,9 +196,21 @@
   <!-- CONTENT-BREAK AD -->
   <div class="ads">Ad Space</div>
 
-  <p class="note">
-    Investment projections are estimates based on assumed rates. Actual returns may vary. Consult a financial advisor for personalized advice.
-  </p>
+  <div class="note">
+    <strong>Note:</strong> Investment projections are estimates based on assumed rates. Actual returns may vary. Consult a financial advisor for personalized advice.
+  </div>
+
+  <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+  </footer>
+
 
 </div>
 
