--- a/calculators/medical-insurance-80d-calculator.html
+++ b/calculators/medical-insurance-80d-calculator.html
@@ -431,8 +431,16 @@
   </div>
 
   <footer>
-    <p>&copy; 2026 Upkarna Online Tools. All rights reserved. | <a href="../privacy-policy.html">Privacy Policy</a></p>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
   </footer>
+
 
 </div>
 
