--- a/calculators/monthly-savings-planner.html
+++ b/calculators/monthly-savings-planner.html
@@ -222,6 +222,22 @@
     <p>Ad Space</p>
   </div>
 
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimates for monthly savings planning. Actual savings potential may vary based on your income fluctuations, expense patterns, emergency fund needs, and financial goals. Adjust your budget regularly and consult a financial planner for personalized savings strategy.
+  </div>
+
+  <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+  </footer>
+
+
 </div>
 
 <script src="monthly-savings-planner.js"></script>
