--- a/calculators/mutual-fund-return-calculator.html
+++ b/calculators/mutual-fund-return-calculator.html
@@ -258,12 +258,21 @@
 
   <div class="ads">Ad Space</div>
 
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimates for mutual fund returns based on assumed growth rate. Actual returns may vary based on fund performance, market conditions, expense ratio, exit loads, and taxes. Mutual funds are subject to market risks. Please read the scheme information document before investing.
+  </div>
+
   <footer>
-    © 2026 Upkarna Online Tools |
-    <a href="../about.html">About</a> |
-    <a href="../privacy-policy.html">Privacy Policy</a> |
-    <a href="../contact.html">Contact</a>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
   </footer>
+
 
 </div>
 
