--- a/calculators/ppf-maturity-calculator.html
+++ b/calculators/ppf-maturity-calculator.html
@@ -233,9 +233,21 @@
     </div>
   </section>
 
-  <p class="note">
-    Note: This calculator provides estimates based on PPF formulas. Actual rates and terms may vary as per government notifications.
-  </p>
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimates based on PPF formulas. Actual rates and terms may vary as per government notifications.
+  </div>
+
+  <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+  </footer>
+
 
 </div>
 
