--- a/calculators/retirement-planning-calculator.html
+++ b/calculators/retirement-planning-calculator.html
@@ -275,12 +275,21 @@
 
   <div class="ads">Ad Space</div>
 
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimates for retirement corpus planning. Actual retirement needs may vary based on inflation rates, life expectancy, medical expenses, lifestyle changes, and investment returns. Consult a financial planner for personalized retirement strategy. Use our <a href="fire-calculator.html">FIRE Calculator</a> for early retirement planning.
+  </div>
+
   <footer>
-    © 2026 Upkarna Online Tools |
-    <a href="../about.html">About</a> |
-    <a href="../privacy-policy.html">Privacy Policy</a> |
-    <a href="../contact.html">Contact</a>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
   </footer>
+
 
 </div>
 
