--- a/calculators/salary-hike-percentage-calculator.html
+++ b/calculators/salary-hike-percentage-calculator.html
@@ -681,9 +681,17 @@
     <strong>Note:</strong> This calculator provides estimates for salary hike percentage and comparison. Actual salary components, tax implications, and in-hand salary may vary based on your CTC structure, tax regime, deductions, and company policies. For accurate CTC to in-hand salary calculation, use our <a href="in-hand-salary-calculator.html">In-Hand Salary Calculator</a>. Consult a financial advisor for personalized career and compensation planning.
   </div>
 
-  <footer>
-    <p>&copy; 2026 Upkarna Online Tools. All rights reserved. | <a href="../privacy-policy.html">Privacy Policy</a></p>
+   <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
   </footer>
+
 
 </div>
 
