--- a/calculators/simple-vs-compound-interest-calculator.html
+++ b/calculators/simple-vs-compound-interest-calculator.html
@@ -218,6 +218,22 @@
     <p>Ad Space</p>
   </div>
 
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimates comparing simple and compound interest. Actual returns may vary based on compounding frequency, interest rate changes, taxes, and fees. Use our <a href="compound-interest-calculator.html">Compound Interest Calculator</a> and <a href="fd-calculator.html">FD Calculator</a> for detailed investment calculations.
+  </div>
+
+  <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+  </footer>
+
+
 </div>
 
 <script src="simple-vs-compound-interest-calculator.js"></script>
