--- a/calculators/sip-calculator.html
+++ b/calculators/sip-calculator.html
@@ -264,7 +264,21 @@
     <strong>Note:</strong> This calculator provides estimates based on assumed constant returns. Actual mutual fund returns vary and depend on market conditions. Past performance doesn't guarantee future returns. Consult a financial advisor before making investment decisions.
   </div>
 
+  <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+  </footer>
+
+
 </div>
+
+
 
 <script src="sip-calculator.js"></script>
 
