--- a/calculators/step-up-sip-calculator.html
+++ b/calculators/step-up-sip-calculator.html
@@ -192,9 +192,21 @@
   <!-- CONTENT-BREAK AD -->
   <div class="ads">Ad Space</div>
 
-  <p class="note">
-    Returns are indicative and subject to market risks.
-  </p>
+  <div class="note">
+    <strong>Note:</strong> Returns are indicative and subject to market risks. Mutual funds are subject to market risks. Please read all scheme-related documents carefully.
+  </div>
+
+  <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+  </footer>
+
 
 </div>
 
