--- a/calculators/wealth-goal-calculator.html
+++ b/calculators/wealth-goal-calculator.html
@@ -216,6 +216,22 @@
     <p>Ad Space</p>
   </div>
 
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimates for achieving wealth goals. Actual time and investment needed may vary based on market returns, inflation, life events, and risk tolerance. Diversify your investments and consult a financial planner for personalized wealth building strategy. Use our <a href="sip-calculator.html">SIP Calculator</a> and <a href="lumpsum-investment-calculator.html">Lumpsum Calculator</a> for detailed planning.
+  </div>
+
+  <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+  </footer>
+
+
 </div>
 
 <script src="wealth-goal-calculator.js"></script>
