--- a/calculators/capital-gains-tax-calculator.html
+++ b/calculators/capital-gains-tax-calculator.html
@@ -229,6 +229,21 @@
     <p>Ad Space</p>
   </div>
 
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimates for capital gains tax in India. Actual tax liability may vary based on your holding period, asset type, indexation benefits, exemptions claimed, and applicable tax regime. Consult a tax advisor for personalized tax planning and filing guidance.
+  </div>
+
+  <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+</footer>
+
 </div>
 
 <script src="capital-gains-tax-calculator.js"></script>
