--- a/calculators/emi-vs-sip-comparison-tool.html
+++ b/calculators/emi-vs-sip-comparison-tool.html
@@ -223,9 +223,21 @@
   <!-- CONTENT-BREAK AD -->
   <div class="ads">Ad Space</div>
 
-  <p class="note">
-    This comparison is for educational purposes. Actual investment returns may vary. Consult a financial advisor for personalized advice.
-  </p>
+  <div class="note">
+    <strong>Note:</strong> This comparison is for educational purposes. Actual investment returns may vary. Consult a financial advisor for personalized advice.
+  </div>
+
+  <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+  </footer>
+
 
 </div>
 
