--- a/calculators/net-worth-calculator.html
+++ b/calculators/net-worth-calculator.html
@@ -209,9 +209,21 @@
   <!-- CONTENT-BREAK AD -->
   <div class="ads">Ad Space</div>
 
-  <p class="note">
-    Net worth calculations are for informational purposes. Consult a financial advisor for personalized advice.
-  </p>
+  <div class="note">
+    <strong>Note:</strong> Net worth calculations are for informational purposes. Consult a financial advisor for personalized advice.
+  </div>
+
+  <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+  </footer>
+
 
 </div>
 
