--- a/calculators/nps-calculator.html
+++ b/calculators/nps-calculator.html
@@ -216,9 +216,21 @@
 
   <div class="ads">Ad Space</div>
 
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimates for NPS maturity corpus and pension. Actual returns may vary based on fund performance, market conditions, annuity rates, and investment choices. Consult your NPS provider or financial advisor for personalized retirement planning.
+  </div>
+
   <footer>
-    <p>&copy; 2024 Upkarna Online Tools. All rights reserved. | <a href="../privacy-policy.html">Privacy Policy</a></p>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
   </footer>
+
 
 </div>
 
