--- a/calculators/rd-calculator.html
+++ b/calculators/rd-calculator.html
@@ -247,9 +247,21 @@
     </div>
   </section>
 
-  <p class="note">
-    Note: This calculator provides estimates based on RD formulas. Actual RD rates and terms may vary by bank.
-  </p>
+  <div class="note">
+    <strong>Note:</strong> This calculator provides estimates based on RD formulas. Actual RD rates and terms may vary by bank.
+  </div>
+
+  <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+  </footer>
+
 
 </div>
 
