--- a/calculators/real-cagr-calculator.html
+++ b/calculators/real-cagr-calculator.html
@@ -184,9 +184,21 @@
   <!-- CONTENT-BREAK AD -->
   <div class="ads">Ad Space</div>
 
-  <p class="note">
-    CAGR calculations are for informational purposes only and do not guarantee future performance.
-  </p>
+  <div class="note">
+    <strong>Note:</strong> CAGR calculations are for informational purposes only and do not guarantee future performance. Past performance is not indicative of future results.
+  </div>
+
+  <footer>
+  <div class="container">
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
+    <p>
+      <a href="../privacy-policy.html">Privacy Policy</a> |
+      <a href="../contact.html">Contact Us</a> |
+      <a href="../about.html">About</a>
+    </p>
+  </div>
+  </footer>
+
 
 </div>
 
